# assessment_winter_2026

./: .gitignore
assignment_0/src/: a0_01_temperature.cpp  a0_02_leap_year.cpp  a0_03_range_sum.cpp  a0_04_vowel_count.cpp  a0_05_score_stats.cpp  a0_06_bigint.cpp  a0_07_log_analyzer.cpp  a0_08_raii_handle.cpp  a0_09_text_pipeline.cpp
assignment_0/src/rm_a0/: a0_01_temperature.hpp  a0_02_leap_year.hpp  a0_03_range_sum.hpp  a0_04_vowel_count.hpp  a0_05_score_stats.hpp  a0_06_bigint.hpp  a0_07_log_analyzer.hpp  a0_08_raii_handle.hpp
assignment_1/src/: frame.cpp  main.cpp
assignment_1/tests/: frame_tests.cpp
assignment_2/: README.md
assignment_2/detector/: CMakeLists.txt  detector.cpp  detector.hpp
assignment_2/repairer/: CMakeLists.txt  repairer.cpp
